--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.20.4",
     "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.12",
     "web-push": "^3.6.7"
   }
 }
